--- a/src/app/components/planet-info/planet-info.component.html
+++ b/src/app/components/planet-info/planet-info.component.html
@@ -1,14 +1,30 @@
-<div class="container flex-column-gap-30">
+<div class="container pb-100 flex-column-gap-30">
+  <button
+    mat-raised-button
+    class="home-btn"
+    color="primary"
+    routerLink="/planets"
+  >
+    Go to planets
+  </button>
   <mat-card class="planet">
     <mat-card-title-group class="planet-info">
-      <mat-card-title class="title">Name: </mat-card-title>
-      <mat-card-content>Rotation period: </mat-card-content>
-      <mat-card-content>Orbital period: </mat-card-content>
-      <mat-card-content>Diameter: </mat-card-content>
-      <mat-card-content>Climate: </mat-card-content>
-      <mat-card-content>Gravity: </mat-card-content>
-      <mat-card-content>Terrain: </mat-card-content>
-      <mat-card-content>Population: </mat-card-content>
+      <mat-card-title class="title">Name: {{ planet.name }}</mat-card-title>
+      <mat-card-content
+        >Rotation period: {{ planet.rotationPeriod }}</mat-card-content
+      >
+      <mat-card-content
+        >Orbital period: {{ planet.orbitalPeriod }}</mat-card-content
+      >
+      <mat-card-content>Diameter: {{ planet.diameter }}</mat-card-content>
+      <mat-card-content
+        >Climate: {{ planet.climate | titlecase }}</mat-card-content
+      >
+      <mat-card-content>Gravity: {{ planet.gravity }}</mat-card-content>
+      <mat-card-content
+        >Terrain: {{ planet.terrain | titlecase }}</mat-card-content
+      >
+      <mat-card-content>Population: {{ planet.population }}</mat-card-content>
     </mat-card-title-group>
     <img
       class="planet-image"
@@ -17,49 +33,68 @@
     />
   </mat-card>
 
-  <table mat-table [dataSource]="residents" class="mat-elevation-z8">
+  <mat-card *ngIf="showResidents" class="residents-control"
+    ><mat-card-title>Residents</mat-card-title
+    ><mat-form-field appearance="fill">
+      <mat-label>Sort by gender</mat-label>
+      <mat-select (valueChange)="filterResidents($event)">
+        <mat-option value="All">All</mat-option>
+        <mat-option value="Male">Male</mat-option>
+        <mat-option value="Female">Female</mat-option>
+      </mat-select>
+    </mat-form-field></mat-card
+  >
+
+  <table
+    *ngIf="showResidents"
+    mat-table
+    [dataSource]="dataSourse"
+    class="mat-elevation-z8"
+  >
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
     </ng-container>
 
     <ng-container matColumnDef="height">
       <th mat-header-cell *matHeaderCellDef>Height</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.height }}</td>
     </ng-container>
 
     <ng-container matColumnDef="mass">
       <th mat-header-cell *matHeaderCellDef>Weight</th>
-      <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.mass }}</td>
     </ng-container>
 
     <ng-container matColumnDef="gender">
       <th mat-header-cell *matHeaderCellDef>Gender</th>
-      <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.gender }}</td>
     </ng-container>
     <ng-container matColumnDef="birthYear">
       <th mat-header-cell *matHeaderCellDef>Birth year</th>
-      <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.birthYear }}</td>
     </ng-container>
 
     <ng-container matColumnDef="eyeColor">
       <th mat-header-cell *matHeaderCellDef>Eye color</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.eyeColor }}</td>
     </ng-container>
 
     <ng-container matColumnDef="hairColor">
       <th mat-header-cell *matHeaderCellDef>Hair color</th>
-      <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.hairColor }}</td>
     </ng-container>
 
     <ng-container matColumnDef="skinColor">
       <th mat-header-cell *matHeaderCellDef>Skin color</th>
-      <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.skinColor }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 
-  <!-- <mat-card><mat-card-title>No residents.</mat-card-title></mat-card> -->
+  <mat-card *ngIf="!showResidents"
+    ><mat-card-title>No residents.</mat-card-title></mat-card
+  >
 </div>
