--- a/src/app/components/planet-info/planet-info.component.scss
+++ b/src/app/components/planet-info/planet-info.component.scss
@@ -1,7 +1,11 @@
+.home-btn {
+  max-width: fit-content;
+  margin-top: 50px;
+}
+
 .planet {
   display: flex;
   justify-content: space-between;
-  margin-top: 50px;
   max-height: 400px;
 }
 
@@ -17,4 +21,14 @@
 .planet-image {
   display: block;
   max-width: 400px;
+}
+
+.residents-control {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  .select {
+    padding: 0;
+  }
 }
