--- a/src/app/components/planet-info/planet-info.component.html
+++ b/src/app/components/planet-info/planet-info.component.html
@@ -28,7 +28,7 @@
     </mat-card-title-group>
     <img
       class="planet-image"
-      src="../../../assets/img/png-planet.png"
+      src="../../../assets/img/png-planet.jpg"
       alt="Planet"
     />
   </mat-card>
