--- a/src/app/components/planets-list/planets-list.component.html
+++ b/src/app/components/planets-list/planets-list.component.html
@@ -6,7 +6,7 @@
 <div class="container grid">
   <mat-card class="planet-card" *ngFor="let planet of planetsList">
     <mat-card-title>{{ planet.name }}</mat-card-title>
-    <img mat-card-image src="../../../assets/img/png-planet.png" alt="Planet" />
+    <img mat-card-image src="../../../assets/img/png-planet.jpg" alt="Planet" />
     <mat-card-content
       >Terrain: {{ planet.terrain | titlecase }}</mat-card-content
     >
